--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,11 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
 	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
+	implementation group: 'org.webjars', name: 'jquery', version: '2.2.4'
+	implementation group: 'org.webjars', name: 'bootstrap', version: '3.3.7'
+
 }
 
 jar {
