--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,8 @@ dependencies {
 	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
 	implementation group: 'org.webjars', name: 'jquery', version: '2.2.4'
 	implementation group: 'org.webjars', name: 'bootstrap', version: '3.3.7'
+	implementation 'org.seleniumhq.selenium:selenium-java:4.1.2'
+	implementation 'io.github.bonigarcia:webdrivermanager:5.3.0'
 
 }
 
@@ -44,7 +46,7 @@ task apiTest(type: Test) {
 	useJUnitPlatform()
 }
 
-test {
+task unitTest(type: Test) {
 	exclude '**/apiTests/**'
 	exclude '**/acceptanceTests/**'
 	systemProperty "calculator.url", System.getProperty("calculator.url")
