--- a/.github/workflows/simple-ci.yaml
+++ b/.github/workflows/simple-ci.yaml
@@ -34,10 +34,10 @@ jobs:
         run: ./gradlew apiTest -Dcalculator.url=http://localhost
       - name: setup chrome web driver
         uses: nanasess/setup-chromedriver@v1
-          - run: |
-              export DISPLAY=:99
-              chromedriver --url-base=/wd/hub &
-              sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & # optional
+      - run: |
+          export DISPLAY=:99
+          chromedriver --url-base=/wd/hub &
+          #sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & # optional
           #deploy:
           # runs-on: ubuntu-latest
 
