--- a/.github/workflows/simple-ci2.yaml
+++ b/.github/workflows/simple-ci2.yaml
@@ -1,1 +1,63 @@
+name: simple example for continuous integration
 
+on:
+  push:
+    branches: [main]
+#env:
+#  AWS_REGION: ap-northeast-2
+#  S3_BUCKET_NAME: ez2learn-s3-bucket
+#  CODE_DEPLOY_APPLICATION_NAME: ez2learn-calc-app
+#  CODE_DEPLOY_DEPLOYMENT_GROUP_NAME: ez2learn-calc-dg
+
+jobs:
+  unit-api-test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: echo a string
+        run: echo "Hello GitHub Action!!"
+      - name: Java Check
+        run: java --version
+      - name: check out code in build (virtual) machine
+        uses: actions/checkout@v3
+      - name: Set up Java 11
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'zulu'
+          java-version: '11'
+      - name: Java Check
+        run: java --version
+      - name: Grant execute permission for gradlew
+        run: chmod +x ./gradlew
+      - name: Unit Test
+        run: ./gradlew unitTest
+      - name: Api Test
+        run: ./gradlew apiTest -Dcalculator.url=http://localhost
+#  e2e-test:
+#    runs-on: ubuntu-latest
+#    needs: unit-api-test
+#    steps:
+#      - name: check out code in build (virtual) machine
+#        uses: actions/checkout@v3
+#      - name: Set up Java 11
+#        uses: actions/setup-java@v3
+#        with:
+#          distribution: 'zulu'
+#          java-version: '11'
+#      - name: Java Check
+#        run: java --version
+#      - name: Grant execute permission for gradlew
+#        run: chmod +x ./gradlew
+#      - name: build jar
+#        run: ./gradlew build
+#      - name: setup chrome web driver
+#        uses: nanasess/setup-chromedriver@v1
+#      - name: clean staging env
+#        run: |
+#          chmod +x ./stop.sh
+#          ./stop.sh
+#      - name: start application
+#        run: |
+#          chmod +x ./start.sh
+#          ./start.sh
+#      - name: e2e test
+#        run: ./gradlew e2eTest -Dcalculator.url=http://localhost:8080
