--- a/.github/workflows/simple-ci.yaml
+++ b/.github/workflows/simple-ci.yaml
@@ -8,7 +8,7 @@ on:
 #  S3_BUCKET_NAME: ez2learn-s3-bucket
 #  CODE_DEPLOY_APPLICATION_NAME: ez2learn-calc-app
 #  CODE_DEPLOY_DEPLOYMENT_GROUP_NAME: ez2learn-calc-dg
-
+# this is a test
 jobs:
   unit-api-test:
     runs-on: ubuntu-latest
