--- a/.github/workflows/simple-ci2.yaml
+++ b/.github/workflows/simple-ci2.yaml
@@ -14,24 +14,24 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: echo a string
-        run: echo "Hello GitHub Action!!"
-      - name: Java Check
-        run: java --version
-      - name: check out code in build (virtual) machine
-        uses: actions/checkout@v3
-      - name: Set up Java 11
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'zulu'
-          java-version: '11'
-      - name: Java Check
-        run: java --version
-      - name: Grant execute permission for gradlew
-        run: chmod +x ./gradlew
-      - name: Unit Test
-        run: ./gradlew unitTest
-      - name: Api Test
-        run: ./gradlew apiTest -Dcalculator.url=http://localhost
+#        run: echo "Hello GitHub Action!!"
+#      - name: Java Check
+#        run: java --version
+#      - name: check out code in build (virtual) machine
+#        uses: actions/checkout@v3
+#      - name: Set up Java 11
+#        uses: actions/setup-java@v3
+#        with:
+#          distribution: 'zulu'
+#          java-version: '11'
+#      - name: Java Check
+#        run: java --version
+#      - name: Grant execute permission for gradlew
+#        run: chmod +x ./gradlew
+#      - name: Unit Test
+#        run: ./gradlew unitTest
+#      - name: Api Test
+#        run: ./gradlew apiTest -Dcalculator.url=http://localhost
 #  e2e-test:
 #    runs-on: ubuntu-latest
 #    needs: unit-api-test
