--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,7 @@ task apiTest(type: Test) {
 task unitTest(type: Test) {
 	exclude '**/apiTests/**'
 	exclude '**/e2eTests/**'
+	include '**/apiTests/**'
 	systemProperty "calculator.url", System.getProperty("calculator.url")
 	useJUnitPlatform()
 }
