--- a/.github/workflows/simple-ci.yaml
+++ b/.github/workflows/simple-ci.yaml
@@ -32,35 +32,35 @@ jobs:
         run: ./gradlew unitTest
       - name: Api Test
         run: ./gradlew apiTest -Dcalculator.url=http://localhost
-#  e2e-test:
-#    runs-on: ubuntu-latest
-#    needs: unit-api-test
-#    steps:
-#      - name: check out code in build (virtual) machine
-#        uses: actions/checkout@v3
-#      - name: Set up Java 11
-#        uses: actions/setup-java@v3
-#        with:
-#          distribution: 'zulu'
-#          java-version: '11'
-#      - name: Java Check
-#        run: java --version
-#      - name: Grant execute permission for gradlew
-#        run: chmod +x ./gradlew
-#      - name: build jar
-#        run: ./gradlew build
-#      - name: setup chrome web driver
-#        uses: nanasess/setup-chromedriver@v1
-#      - name: clean staging env
-#        run: |
-#          chmod +x ./stop.sh
-#          ./stop.sh
-#      - name: start application
-#        run: |
-#          chmod +x ./start.sh
-#          ./start.sh
-#      - name: e2e test
-#        run: ./gradlew e2eTest -Dcalculator.url=http://localhost:8080
+  e2e-test:
+    runs-on: ubuntu-latest
+    needs: unit-api-test
+    steps:
+      - name: check out code in build (virtual) machine
+        uses: actions/checkout@v3
+      - name: Set up Java 11
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'zulu'
+          java-version: '11'
+      - name: Java Check
+        run: java --version
+      - name: Grant execute permission for gradlew
+        run: chmod +x ./gradlew
+      - name: build jar
+        run: ./gradlew build
+      - name: setup chrome web driver
+        uses: nanasess/setup-chromedriver@v1
+      - name: clean staging env
+        run: |
+          chmod +x ./stop.sh
+          ./stop.sh
+      - name: start application
+        run: |
+          chmod +x ./start.sh
+          ./start.sh
+      - name: e2e test
+        run: ./gradlew e2eTest -Dcalculator.url=http://localhost:8080
           #deploy:
           # runs-on: ubuntu-latest
 
