--- a/.github/workflows/simple-ci.yaml
+++ b/.github/workflows/simple-ci.yaml
@@ -1,4 +1,4 @@
-name: simple example for continuous integration #conflicts
+name: simple example for continuous integration #conflicts remote
 
 on:
   push:
